--- a/deployment-templates/.goreleaser.yml
+++ b/deployment-templates/.goreleaser.yml
@@ -5,7 +5,7 @@ before:
   hooks:
     - make tfgen
 builds:
-  - binary: pulumi-resource-xyz
+  - binary: pulumi-resource-namecheap
     dir: provider
     env:
       - CGO_ENABLED=0
@@ -18,8 +18,8 @@ builds:
       - linux
     ldflags:
       # The line below MUST align with the module in current provider/go.mod
-      - -X github.com/pulumi/pulumi-xyz/provider/pkg/version.Version={{.Tag }}
-    main: ./cmd/pulumi-resource-xyz/
+      - -X github.com/sst/pulumi-namecheap/provider/pkg/version.Version={{.Tag }}
+    main: ./cmd/pulumi-resource-namecheap/
 changelog:
   skip: true
 release:
