--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,11 +37,11 @@ jobs:
         run: go mod download
 
       - uses: goreleaser/goreleaser-action@v4
-        working-directory: ./provider
         with:
           distribution: goreleaser
           version: latest
           args: release --clean
+          workdir: ./provider
         env:
           GITHUB_TOKEN: ${{ secrets.SST_GITHUB_TOKEN }}
           AUR_KEY: ${{ secrets.AUR_KEY }}
