--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20.x
+          registry-url: "https://registry.npmjs.org"
+          scope: '@sst-provider'
 
       - name: Install pulumictl
         uses: jaxxstorm/action-install-gh-release@v1.10.0
