--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
       #    GITHUB_TOKEN: ${{ secrets.SST_GITHUB_TOKEN }}
       #    AUR_KEY: ${{ secrets.AUR_KEY }}
 
-      - run: npm run publish
+      - run: npm publish
         working-directory: ./sdk/nodejs
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
