--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -23,6 +23,7 @@
     },
     "pulumi": {
         "resource": true,
-        "name": "namecheap"
+        "name": "namecheap",
+        "server": "github://api.github.com/sst"
     }
 }
